2003-07-29  Derek Price  <derek@ximbiot.com>

	* configure.in: Do not check for getpassphrase.  Define `getpass' to
	`cvs_getpass' in config.h to avoid conflicts with system decls.
	* srclist.txt ($GNULIB/modules/getpass): New entry.
	* NEWS: Note use of GNULIB getpass.

	* config.h.in, configure: Regenerated.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* INSTALL: Note --without-gssapi required to configure on OS X.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* srclist.txt (lstat, stat): Correct typo.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* srclist.txt (getline, getnline, getndelim2): Mark some files sync'd.
	* aclocal.m4, config.h.in, configure: Regenerated.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove gethostname from AC_REPLACE_FUNCS call and add a
	call to gl_FUNC_GETHOSTNAME.
	* srclist.txt ($GNULIB/modules/gethostname): Add this source.

	* aclocal.m4, config.h.in, configure: Regenerated.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* HACKING (Indentation style): Note the new C89 literal string
	standard.
	(Portability): Ditto, plus mention the headers we assume from C89.
	* NEWS: Mention that we dropped K&R support.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* configure.in: We can assume <limits.h> and <stdarg.h>, so we no
	longer need to check for <limits.h> or <varargs.h>.
	* srclist.txt (m4/gettext): Note local modifications.

	* aclocal.m4: Regenerate.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* configure.in: Add call to gl_FUNC_STRERROR,
	s/jm_FUNC_MEMMOVE/gl_FUNC_MEMMOVE/, and alphebetize list.
	* srclist.txt: Add GNULIB strerror module.

	* aclocal.m4: Regenerated.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* configure.in: Add call to gl_FUNC_MEMMOVE and remove memmove from the
	call to AC_REPLACE_FUNCS.
	* srclist.txt: Note import of GNULIB memmove module.

	* aclocal.m4: Regenerated.